--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "@angular/platform-browser": "~8.0.3",
     "@angular/platform-browser-dynamic": "~8.0.3",
     "@angular/router": "~8.0.3",
+    "classlist.js": "^1.1.20150312",
     "g": "^2.0.1",
     "hammerjs": "^2.0.8",
     "moment": "^2.24.0",
-    "rxjs": "~6.4.0",
+    "rxjs": "^6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
