--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "classlist.js": "^1.1.20150312",
     "g": "^2.0.1",
     "hammerjs": "^2.0.8",
+    "mat-table-exporter": "^1.2.2",
     "moment": "^2.24.0",
     "rxjs": "^6.5.3",
     "tslib": "^1.9.0",
+    "xlsx": "^0.15.4",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
